<resources>
    <string name="app_name">YouIn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Show me what\'s up!</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="welcome_text">Welcome to YouIn</string>
    <string name="username_text">Enter Your Username</string>
    <string name="password_text">Enter Your Password</string>
    <string name="youin_logo">YouIn Logo</string>
    <string name="sign_up_for_youin">Sign up for YouIn</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="create_my_account">Create My Account</string>
    <string name="feed_welcome_text">Welcome to YouIn</string>
    <string name="feed_text">YouIn?</string>
    <string name="test_description">This is a test description for the first image</string>
    <string name="career_fair_header">Grove City College Career Fair</string>
    <string name="where_text">Where: Grove City College PLC</string>
    <string name="career_fair_when">When: October 9th, 12:00 - 5:00 PM</string>
    <string name="add_event_photo">Upload Poster</string>
    <string name="add_event_title">Event Title</string>
    <string name="add_event_date">--/--/----</string>
    <string name="add_event_date_button">CHANGE DATE</string>
    <string name="add_event_time">--:-- AM/PM</string>
    <string name="add_event_time_button">CHANGE TIME</string>
    <string name="about">About</string>
    <string name="signUp">Sign Up for You In</string>
    <string name="aboutPageImage">image</string>
    <string name="authors_names">Created by Jacob Dybas, Nic Grube, Sam Mendheim and Jacob Ramseyer</string>
    <string name="myMap">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="welcome_to_the_map">Welcome to the map.</string>
    <string name="settings">settings</string>
    <string name="navigation">navigation</string>
    <string name="this_is_your_account_settings">This is your account settings.</string>
    <string name="notificationsText">Notifications:</string>
    <string name="radiobutton">RadioButton</string>
    <string name="notifications">Notifications:</string>
    <string name="private_account">Private Account:</string>
    <string name="sign_out">Sign Out</string>
    <string name="assignments">Assignments</string>
    <string name="food">Food</string>
    <string name="back_to_main_feed">Back to Main Feed</string>

    <string-array name="Locations">
        <item>Carnegie</item>
        <item>Old Map</item>
        <item>Ket Rec</item>
        <item>Student Union</item>
        <item>HAL</item>
        <item>STEM</item>

    </string-array>
</resources>
