<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.youin.CreateNewPost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/newPoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/uploadImage"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/add_event_photo" />

        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/add_event_title"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/eventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/add_event_time"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TimePicker
                android:id="@+id/eventTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/add_event_time_button"
                android:timePickerMode="spinner" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/add_event_date"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eventDateButton"
                android:text="@string/add_event_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <Spinner
            android:id="@+id/eventLocation"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="15dp"
            android:background="@color/gray"
            android:hint="@string/add_event_title"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#039BE5" />

        <Button
            android:id="@+id/newPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create New Post" />


    </LinearLayout>

</layout>


